fix spin button alignement on Safari

--- a/packages/coffee.chealt.com/src/components/taste-notes/taste-note-groups/wheel.css
+++ b/packages/coffee.chealt.com/src/components/taste-notes/taste-note-groups/wheel.css
@@ -42,7 +42,7 @@ coffee-taste-note-wheel {
     position: absolute;
     inset: 0;
     display: flex;
-    align-self: center;
+    align-items: center;
     justify-content: center;
 
     button {
